Closed Bug 176421 Opened 22 years ago Closed 19 years ago

The Toolbar show/hide widget isn't displayed when window.open() suppresses Toolbar display

Categories

(Camino Graveyard :: Toolbars & Menus, defect, P4)

PowerPC
macOS

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.0

People

(Reporter: twentyonebeads, Assigned: sfraser_bugs)

References

Details

(Keywords: testcase)

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.1) Gecko/20021022 Chimera/0.5+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.1) Gecko/20021022 Chimera/0.5+

In Chimera popups that open without the toolbar accessable hide/show toolbar is
deactivated in menubar, and button in upper right hand corner of window is not
present.

Reproducible: Always

Steps to Reproduce:
1.click on link that causes popup to appear(I used Moc OSX link under search
limitations at http://developer.apple.com/search/


Actual Results:  
Toolbar cannot be accessed in popup.  hide/show toolbar is deactivated in
menubar, and button in upper right hand corner of window is not present.

Expected Results:  
Toolbar should be collapsed, as it is, when popup opens.  However, it should be
possible to open toolbar from the menu and with the button in upper right hand
corner of the window.
Severity: normal → enhancement
*** Bug 185752 has been marked as a duplicate of this bug. ***
Confirmed in Chimera/2002121004.
Status: UNCONFIRMED → NEW
Ever confirmed: true
The main question here is why you would want to get to the toolbar in a popup
window?
Assignee: brade → sfraser
Summary: Toolbar cannot be opened in some popups. → Allow access to toolbar in popup windows
IME
- To access the location
- sometimes popups turn into full-blown browser sessions due to bad design
Some pop ups contain hyperlinks to pages that will appear in the same pop up
window.  This allows easy navigation between them.  Either way, there is no
practical reason to lock out the tool bar.
Agreed.
Status: NEW → ASSIGNED
I agree with this poster. I noticed it today on a site that displayed some of
it's content in seperate windows. It was very annoying that the Web page author
had more control over my browser than I did. I could not even copy the URL of
the page without looking at the source of the first page.
I think you can disable this behaviour by adding this line in your prefs.js
file. This will make the location bar visible in all popup windows:

user_pref("dom.disable_window_open_feature.location", true);

Or you can make the menubar always visible where you can then access the menu
options to make any other bar visible:

user_pref("dom.disable_window_open_feature.menubar", true);
Revising summary and severity.
Severity: enhancement → minor
Keywords: testcase
Summary: Allow access to toolbar in popup windows → The Toolbar show/hide widget isn't displayed when window.open() suppresses Toolbar display
For the record, Camino doesn't respect the prefs mentioned in #8, above. Sure
would be nice if it did, though. :)

cl
Priority: -- → P4
Target Milestone: --- → Camino1.1
Fixed; we now allow you to show the toolbar and bookmarks toolbar in chromed
windows.

> user_pref("dom.disable_window_open_feature.location", true);

This pref should work now too.

Currently, you can't show the status bar if it's been hidden by chrome flags,
but gecko defaults to never hiding it anyway. This should be fixed as part of
bug 159233.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Target Milestone: Camino1.1 → Camino1.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: