Fix bug 176421: even if window.open() hides parts of the chrome with chrome flags, make sure the user can show the toolbar and bookmarks toolbar.